# ObjectivelyGPU

./: .gitignore  COPYING  Doxyfile  Makefile.am  README.md  configure.ac
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  release.yml
Documentation/: guide.md  index.md  install.md
Examples/: Hello  Hello.c  HelloCompute  HelloCompute.c  Makefile.am
Examples/Hello-iOS/: Hello-iOS.c
Examples/Shaders/: Makefile.am
Frameworks/: build-xcframework.sh
ObjectivelyGPU.vs15/: ObjectivelyGPU.vcxproj  sdl3.targets
ObjectivelyGPU.vs15/Sources/: WindowlyGPU.h
ObjectivelyGPU.xcodeproj/: project.pbxproj
ObjectivelyGPU.xcodeproj/xcshareddata/xcschemes/: ObjectivelyGPU-Hello-iOS.xcscheme  ObjectivelyGPU-Hello.xcscheme  ObjectivelyGPU-HelloCompute.xcscheme  ObjectivelyGPU-xcframework.xcscheme  ObjectivelyGPU.xcscheme
ObjectivelyGPU.xcworkspace/: contents.xcworkspacedata
Sources/: ObjectivelyGPU.h
Sources/ObjectivelyGPU/: Buffer.c  Buffer.h  CommandBuffer.c  CommandBuffer.h  ComputePass.c  ComputePass.h  ComputePipeline.c  ComputePipeline.h  CopyPass.c  CopyPass.h  Fence.c  Fence.h  Framebuffer.c  Framebuffer.h  GraphicsPipeline.c  GraphicsPipeline.h  Makefile.am  QueryPool.c  QueryPool.h  RenderDevice.c  RenderDevice.h  RenderPass.c  RenderPass.h  Sampler.h  Shader.c  Shader.h  Texture.c  Texture.h  TransferBuffer.c  TransferBuffer.h  Types.h
